--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,26 @@
 {
-    "version":2,
-    "builds":[
+    "version": 2,
+    "builds": [
         {
-            "src":"shiva/wsgi.py",
-            "use":"@vercel/python",
-            "config" : {"maxLambdaSize": "15mb", "runtime":"python 3.12.0"}
-        },
+            "src": "shiva/wsgi.py",
+            "use": "@vercel/python",
+            "config": {
+                "maxLambdaSize": "15mb",
+                "runtime": "python 3.12.0"}
+            },
+    
         {
-            "src":"build_files.sh",
-            "use":"@vercel/static-build",
-            "config" : {
-                "distDir":"staticfiles_build"
-        }
+            "src": "build_files.sh",
+            "use": "@vercel/static-build",
+            "config": {
+                "distDir": "staticfiles_build"
+            }
         }
     ],
-    "routes":[
+    "routes": [
         {
             "src": "/static/(.*)",
-            "dest":"/static/$1"
+            "dest": "/static/$1"
         },
         {
             "src": "/(.*)",
