--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,11 @@
     "version": 2,
     "builds": [
         {
+            "src": "package.json",
+           "use": "vercel-sapper"
+         },
+         
+        {
             "src": "shiva/wsgi.py",
             "use": "@vercel/python",
             "config": {
@@ -16,6 +21,7 @@
                 "distDir": "staticfiles_build"
             }
         }
+       
     ],
     "routes": [
         {
